[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task_6_danil_shvecov"
version = "0.1.16"
authors = [
  { name="Shvecov Danil", email="danilaleksandrovich36@gmail.com" },
]
description = "Task_6 from Foxminded course"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.sources]
"src/main" = "task_6"


[project.urls]
"Homepage" = "https://github.com/Danil1994/pypa/tree/main"
"Bug Tracker" = "https://github.com/Danil1994/pypa/blob/main/issues"
